Add an exercise, clean up the top description, update TOC.

--- a/demoes/climate_timeseries/climate_timeseries.ipynb
+++ b/demoes/climate_timeseries/climate_timeseries.ipynb
@@ -1,21 +1,13 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:764247c3e0f83fb02ff3180613f168ce52020c95597f54d29519fab2f8d40ef0"
+  "signature": "sha256:da664138dc6267c0ece55dcdb2beb26f2f25c2dd2229421b4fb8e1703aaf1da5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "!! WORK IN PROGRESS !!"
-     ]
-    },
     {
      "cell_type": "heading",
      "level": 1,
@@ -43,34 +35,27 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The global goal of this demo is to try and reproduce some of the analysis done in the IPCC global climate reports published in the last decade. \n",
+      "The global goal of this demo is to provide the tools to be able to try and reproduce some of the analysis done in the IPCC global climate reports published in the last decade (see for example https://www.ipcc.ch/pdf/assessment-report/ar5/syr/SYR_AR5_FINAL_full.pdf). \n",
       "\n",
-      "We are first going to load a few datasets containing information about global temperature, global and local sea level infomation, global concentration of greenhouse gases like CO2 and methane, and some data related to extreme weather events, to see if there are some correlations and how the trends are likely to evolve. For all these datasets, we will download them, visualize them, clean them, search through them, merge them, resample them, transform them and summarize them."
+      "We are first going to load a few datasets containing information about global temperature, global and local sea level infomation, and global concentration of greenhouse gases like CO2, to see if there are correlations and how the trends are likely to evolve. For all these datasets, we will download them, visualize them, clean them, search through them, merge them, resample them, transform them and summarize them."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "LEFT TO ADD:\n",
-      "- data alignment between timeseries on different scales (sea level and monthly ?temperatures)\n",
-      "- extrapolation (auto-regression) of temperature and sea level to see if the target for the end of century is 2deg or 4deg\n",
-      "- correlations between sea level and temperature, and/or between greenhouse gaz and temperature and between temperature and/or extreme events ?"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "TODO: UPDATE:\n",
-      "\n",
       "In the process, we will learn about:\n",
       "    1. Loading data\n",
-      "    2. Cleaning data\n",
-      "    3. plotting data\n",
-      "    4. Transforming data\n",
-      "    5. Computing and analyzing\n",
-      "    6. Predicting the future"
+      "    2. Pandas datastructures\n",
+      "    3. Cleaning and formatting data\n",
+      "    3. Basic visualization\n",
+      "    4. Accessing data\n",
+      "    5. Working with dates and times\n",
+      "    6. Transforming datasets\n",
+      "    7. Statistical analysis\n",
+      "    8. Data agregation and summarization\n",
+      "    9. Correlations and regressions\n",
+      "    10. Predictions from auto regression models"
      ]
     },
     {
@@ -8198,7 +8183,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Data Cleaning"
+      "Cleaning and formatting data"
      ]
     },
     {
@@ -15492,7 +15477,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Transforming the datasets: apply, sort, unstack and transpose"
+      "Transforming datasets: apply, sort, unstack and transpose"
      ]
     },
     {
@@ -23173,7 +23158,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Correlations and regression"
+      "Correlations and regressions"
      ]
     },
     {
@@ -26454,13 +26439,30 @@
      "prompt_number": 166
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**EXERCISE:** Make another auto-regression on the sea level of the Atlantic ocean to estimate how much New York is going to flood in the coming century. You can find the historical sea levels of the Atlantic ocean at http://sealevel.colorado.edu/files/current/sl_Atlantic_Ocean.txt or data/sea_levels/sl_Atlantic_Ocean.txt."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Your code here"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 167
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 166
+     "outputs": []
     }
    ],
    "metadata": {}
