Add comment about having to login.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e81b831a401df91c62f8375b27d85e8980f0221bce4ad687e043f339e37e6cf6"
+  "signature": "sha256:e99889228f274ce09cc743810fcfac607ff457057a39f8dae0b8147e9100b337"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2008,7 +2008,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**QUIZZ:** What happens if you remove the `skiprows`? `skipfooter`? `engine`?"
+      "**QUIZ:** What happens if you remove the `skiprows`? `skipfooter`? `engine`?"
      ]
     },
     {
@@ -9209,7 +9209,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**QUIZZ:** How much memory did we save? What if it was categorized by with dtype `object` instead of `category`?"
+      "**QUIZ:** How much memory did we save? What if it was categorized by with dtype `object` instead of `category`?"
      ]
     },
     {
@@ -12366,7 +12366,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**QUIZZ:** Why is there still some countries with no entries?"
+      "**QUIZ:** Why is there still some countries with no entries?"
      ]
     },
     {
