Some more improvements of comments.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:44b0de92c230cf17b3bcc6bd1d58cfc31989084ac001bab4670fa385f61ae24e"
+  "signature": "sha256:1aa4b020cf539c9a7715b395fbf4acf245e0efc2b2f5bec9d46f3b4dea324d09"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1838,6 +1838,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Let's look at the GISS dataset differently. Instead of seeing the months along the axis 1, and the years along the axis 0, it would could be good to convert these into an outer and an inner axis along only 1 time dimension.\n",
+      "\n",
       "Stacking and unstacking allows to convert a dataframe into a series and vice-versa:"
      ]
     },
@@ -1935,15 +1937,28 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "But this new multi-index isn't very good, because is it not viewed as 1 date, just as a tuple of values:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# But the index isn't yet very good, because is it now viewed as 1 date\n",
       "giss_temp_series.plot(figsize=LARGE_FIGSIZE)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To improve on this, let's reuse an index we generated above with `date_range`:"
+     ]
     },
     {
      "cell_type": "code",
@@ -1976,15 +1991,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's go back to the dataframe version of the GISS temperature dataset temporarily to analyze anomalies month per month"
+      "Let's go back to the dataframe version of the GISS temperature dataset temporarily to analyze anomalies month per month. Like most functions on a dataframe, stats function are computed column per column. They also ignore missing values:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Like most functions on a dataframe, stats function are computed column per column\n",
-      "# They also ignore missing values\n",
       "monthly_averages = giss_temp.mean()\n",
       "monthly_averages"
      ],
@@ -1993,10 +2006,16 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "`describe` provides many descriptive stats computed at once:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Many descriptive stats computed at once:\n",
       "mean_sea_level.describe()"
      ],
      "language": "python",
@@ -2012,10 +2031,16 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Let's remove high frequency signal and extract the trend:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Let's remove high frequency signal and extract the trend:\n",
       "full_globe_temp.plot()\n",
       "pd.rolling_mean(full_globe_temp, 10).plot(figsize=LARGE_FIGSIZE)"
      ],
@@ -2046,7 +2071,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's look at our sea level station dataset some more:"
+      "Let's look at our `local_sea_level_stations` dataset some more:"
      ]
     },
     {
@@ -2063,7 +2088,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "`.describe()` only displays information about continuous `Series`. What about categorical ones:"
+      "`.describe()` only displays information about continuous `Series`. What about categorical ones?"
      ]
     },
     {
@@ -2129,10 +2154,16 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can also create categorical series from continuous ones with the cut function:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# We can also create categorical series from continuous ones with the cut function:\n",
       "categorized = pd.cut(full_globe_temp, 3, labels=[\"L\", \"M\", \"H\"])\n",
       "categorized"
      ],
@@ -2178,7 +2209,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's explore the sea levels split into the northern and southern hemisphere."
+      "Let's explore the sea levels, first splitting into calendar years:"
      ]
     },
     {
@@ -2226,6 +2257,30 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "What kind of object did we create?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "type(sl_grouped_year)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "What to do with that strange GroupBy object? We can first loop over it to get the labels and the sub-dataframes for each group:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -2239,12 +2294,16 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We could have done the same with less effort by grouping by the result of a custom function applied to the index. Let's reset the dataframe:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# We could have done the same with less effort by grouping by the result of a custom function applied \n",
-      "# to the index:\n",
-      "# Let's reset the dataframe:\n",
       "mean_sea_level = mean_sea_level.drop([\"year\"], axis=1).set_index(\"date\")"
      ],
      "language": "python",
@@ -2252,13 +2311,33 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "So that we can do the groupby on the index:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# So that we can do the groupby on the index:\n",
-      "sl_grouped_year = mean_sea_level.groupby(int)\n",
-      "# In addition to looping over the groupby object, we can look at its groups attribute to see \n",
-      "# the labels mapped to the rows involved:\n",
+      "sl_grouped_year = mean_sea_level.groupby(int)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Something else that can be done with such an object is to look at its `groups` attribute to see the labels mapped to the rows involved:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "sl_grouped_year.groups"
      ],
      "language": "python",
@@ -2266,11 +2345,16 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "How to aggregate the results of this grouping depends on what we want to see: do we want to see averaged over the years? That is so common that it has been implemented directly as a method on the `GroupBy` object."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# How to aggregate the results of this grouping depends on what we want to see: do we want to see averaged \n",
-      "# over the years?\n",
       "sl_grouped_year.mean()"
      ],
      "language": "python",
