--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1aa4b020cf539c9a7715b395fbf4acf245e0efc2b2f5bec9d46f3b4dea324d09"
+  "signature": "sha256:4b08a7dcdd2fd2e84f95b4803ec76927abce3b73529350a1669b6b9a302ede7c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2748,7 +2748,7 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "An interlude: data Alignment and merge"
+      "An interlude: data alignment"
      ]
     },
     {
@@ -2896,17 +2896,6 @@
      "input": [
       "# What is the frequency of the new index? The numpy way to compute differences between all values doesn't work:\n",
       "dt_index[1:] - dt_index[:-1]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# Note: the result of a difference of timestamps is a series of timedeltas\n",
-      "(dt_index[1:] - dt_index[:-1]).dtype"
      ],
      "language": "python",
      "metadata": {},
