--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4b08a7dcdd2fd2e84f95b4803ec76927abce3b73529350a1669b6b9a302ede7c"
+  "signature": "sha256:48131a620df0bdb9e93f249af3ae9df318b8bc96468b643e327973c7e2fb5894"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2209,7 +2209,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's explore the sea levels, first splitting into calendar years:"
+      "Let's explore the sea levels, first splitting into calendar years to compute average sea levels for each year:"
      ]
     },
     {
