Add (and fix) section numbering.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:48131a620df0bdb9e93f249af3ae9df318b8bc96468b643e327973c7e2fb5894"
+  "signature": "sha256:a2b1c9c940a5f788ac8befda0ba74c3f871d8a2f15d4cdb01f733081643c6930"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,7 +37,7 @@
      "source": [
       "The global goal of this demo is to provide the tools to be able to try and reproduce some of the analysis done in the IPCC global climate reports published in the last decade (see for example https://www.ipcc.ch/pdf/assessment-report/ar5/syr/SYR_AR5_FINAL_full.pdf). \n",
       "\n",
-      "We are first going to load a few datasets containing information about global temperature, global and local sea level infomation, and global concentration of greenhouse gases like CO2, to see if there are correlations and how the trends are likely to evolve. For all these datasets, we will download them, visualize them, clean them, search through them, merge them, resample them, transform them and summarize them."
+      "We are first going to load a few datasets containing information about global temperature, global and local sea level infomation, and global concentration of greenhouse gases like CO2, to see if there are correlations and how the trends are to evolve, assuming no fundamental change in the system. For all these datasets, we will download them, visualize them, clean them, search through them, merge them, resample them, transform them and summarize them."
      ]
     },
     {
@@ -48,14 +48,14 @@
       "    1. Loading data\n",
       "    2. Pandas datastructures\n",
       "    3. Cleaning and formatting data\n",
-      "    3. Basic visualization\n",
-      "    4. Accessing data\n",
-      "    5. Working with dates and times\n",
-      "    6. Transforming datasets\n",
-      "    7. Statistical analysis\n",
-      "    8. Data agregation and summarization\n",
-      "    9. Correlations and regressions\n",
-      "    10. Predictions from auto regression models"
+      "    4. Basic visualization\n",
+      "    5. Accessing data\n",
+      "    6. Working with dates and times\n",
+      "    7. Transforming datasets\n",
+      "    8. Statistical analysis\n",
+      "    9. Data agregation and summarization\n",
+      "    10. Correlations and regressions\n",
+      "    11. Predictions from auto regression models"
      ]
     },
     {
@@ -63,7 +63,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Some initial setup"
+      "0. Some initial setup"
      ]
     },
     {
@@ -102,7 +102,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Loading data"
+      "1. Loading data"
      ]
     },
     {
@@ -413,7 +413,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Pandas DataStructures"
+      "2. Pandas DataStructures"
      ]
     },
     {
@@ -750,7 +750,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Cleaning and formatting data"
+      "3. Cleaning and formatting data"
      ]
     },
     {
@@ -1197,7 +1197,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Basic visualization"
+      "4. Basic visualization"
      ]
     },
     {
@@ -1321,7 +1321,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Accessing data"
+      "5. Accessing data"
      ]
     },
     {
@@ -1539,7 +1539,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Working with dates and times"
+      "6. Working with dates and times"
      ]
     },
     {
@@ -1716,7 +1716,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Transforming datasets: apply, sort, stack/unstack and transpose"
+      "7. Transforming datasets: apply, sort, stack/unstack and transpose"
      ]
     },
     {
@@ -1976,7 +1976,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Statistical analysis"
+      "8. Statistical analysis"
      ]
     },
     {
@@ -2194,7 +2194,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Data Aggregation/summarization"
+      "9. Data Aggregation/summarization"
      ]
     },
     {
@@ -2539,7 +2539,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Correlations and regressions"
+      "10. Correlations and regressions"
      ]
     },
     {
@@ -3098,7 +3098,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Predictions from auto regression models"
+      "11. Predictions from auto regression models"
      ]
     },
     {
@@ -3141,7 +3141,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**EXERCISE:** Make another auto-regression on the sea level of the Atlantic ocean to estimate how much New York is going to flood in the coming century. You can find the historical sea levels of the Atlantic ocean at http://sealevel.colorado.edu/files/current/sl_Atlantic_Ocean.txt or data/sea_levels/sl_Atlantic_Ocean.txt."
+      "**EXERCISE:** Make another auto-regression on the sea level of the Atlantic ocean to estimate how much New York is going to flood in the coming century. You can find the historical sea levels of the Atlantic ocean at http://sealevel.colorado.edu/files/current/sl_Atlantic_Ocean.txt or locally in `data/sea_levels/sl_Atlantic_Ocean.txt`."
      ]
     },
     {
