Adding a last updated cell at the top.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,13 +1,20 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a2b1c9c940a5f788ac8befda0ba74c3f871d8a2f15d4cdb01f733081643c6930"
+  "signature": "sha256:811a54be02dcbe175c30a47ff6d335a0d0d8201acc4fec3b9ee54d1f615f0c09"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Last updated: Jul 06 2015"
+     ]
+    },
     {
      "cell_type": "heading",
      "level": 1,
