--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5f0406a7303661d4ebc15bfc38c63d82bdd563457304032bccbaa22f73878c70"
+  "signature": "sha256:ad496a848034e651ff170a4295f0908d0d599e45abff04125bcf1811461d6e7e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -70,7 +70,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "0. Some initial setup"
+      "Some initial setup"
      ]
     },
     {
