Adding links to exercises.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ad496a848034e651ff170a4295f0908d0d599e45abff04125bcf1811461d6e7e"
+  "signature": "sha256:6cc2f335957faa01de15996cf5c9bd047db2ee2cbde71928a472e88fbeec79ae"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1324,6 +1324,13 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**EXERCISE:** Refer to `exercises/aapl_adj_close_plot/aapl_adj_close_plot.ipynb`"
+     ]
+    },
+    {
      "cell_type": "heading",
      "level": 2,
      "metadata": {},
@@ -2528,6 +2535,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "**EXERCISE:** Refer to `exercises/pivot_table/pivot_tables.py`"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "**EXERCISE:** How would we build the same dataframe with a `groupby` operation?"
      ]
     },
@@ -3160,6 +3174,28 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Want to practice more?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**EXERCISE (computations):** Refer to `exercises/stock_returns/stock_returns.py`"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**EXERCISE (stats, groupby, timeseries):** Refer to `exercises/pandas_wind_statistics/pandas_wind_statistics.py`"
+     ]
     },
     {
      "cell_type": "code",
