Adding a second step to the final AR exercise to use the local_station dataset.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6cc2f335957faa01de15996cf5c9bd047db2ee2cbde71928a472e88fbeec79ae"
+  "signature": "sha256:e49b4a67ac990dcbf3eb622a3ee416223b27e890a58248f2b47865c9a76553e2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3162,7 +3162,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**EXERCISE:** Make another auto-regression on the sea level of the Atlantic ocean to estimate how much New York is going to flood in the coming century. You can find the historical sea levels of the Atlantic ocean at http://sealevel.colorado.edu/files/current/sl_Atlantic_Ocean.txt or locally in `data/sea_levels/sl_Atlantic_Ocean.txt`."
+      "**EXERCISE:** Make another auto-regression on the sea level of the Atlantic ocean to estimate how much New York is going to flood in the coming century. \n",
+      "\n",
+      "1. You can find the historical sea levels of the Atlantic ocean at http://sealevel.colorado.edu/files/current/sl_Atlantic_Ocean.txt or locally in `data/sea_levels/sl_Atlantic_Ocean.txt`. \n",
+      "2. A little more work but more precise: extract the ID of a station in NewYork from the `local_sea_level_stations` dataset, and use it to download timeseries in NY."
      ]
     },
     {
