Adding an exercise, fix a few typos in text, added more description.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e49b4a67ac990dcbf3eb622a3ee416223b27e890a58248f2b47865c9a76553e2"
+  "signature": "sha256:e2554434cf94d2d511b42a36723d5165d1cddb74de4301ed3a4fd18afcf61123"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1766,7 +1766,7 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "Apply: transforming a Series"
+      "Apply: transforming Series"
      ]
     },
     {
@@ -1810,6 +1810,23 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "**EXERCISE:** Use the `apply` method to search through the stations names for a station in New York."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Your code here"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Now that we know the range of dates, to look at the data, sorting it following the dates is done with `sort`:"
      ]
     },
@@ -1827,7 +1844,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Since many stations last updated on the same dates, it is logical to want to sort further, for example, by Country at constant date:"
+      "Since many stations last updated on the same dates, it is logical to want to sort further, for example, by `Country` at constant date:"
      ]
     },
     {
@@ -2005,7 +2022,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's go back to the dataframe version of the GISS temperature dataset temporarily to analyze anomalies month per month. Like most functions on a dataframe, stats function are computed column per column. They also ignore missing values:"
+      "Let's go back to the dataframe version of the GISS temperature dataset temporarily to analyze anomalies month per month. Like most functions on a dataframe, stats functions are computed column per column. They also ignore missing values:"
      ]
     },
     {
@@ -2014,6 +2031,24 @@
      "input": [
       "monthly_averages = giss_temp.mean()\n",
       "monthly_averages"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "It is possible to apply stats functions across rows instead of columns using the `axis` keyword (just like in NumPy)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "yearly_averages = giss_temp.mean(axis=1)\n",
+      "yearly_averages"
      ],
      "language": "python",
      "metadata": {},
@@ -2078,7 +2113,7 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "Analyzing categorical series"
+      "Describing categorical series"
      ]
     },
     {
@@ -2200,7 +2235,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**QUIZ:** How much memory did we save? What if it was categorized by with dtype `object` instead of `category`?"
+      "**QUIZ:** How much memory did we save? What if it was categorized but with dtype `object` instead of `category`?"
      ]
     },
     {
@@ -2209,6 +2244,13 @@
      "metadata": {},
      "source": [
       "9. Data Aggregation/summarization"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now that we have a good grasp on our datasets, Let's transform and analyze them some more to prepare them to compare them. The 2 function(alities)s to learn about here are `groupby` and `pivot_table`."
      ]
     },
     {
@@ -3165,7 +3207,7 @@
       "**EXERCISE:** Make another auto-regression on the sea level of the Atlantic ocean to estimate how much New York is going to flood in the coming century. \n",
       "\n",
       "1. You can find the historical sea levels of the Atlantic ocean at http://sealevel.colorado.edu/files/current/sl_Atlantic_Ocean.txt or locally in `data/sea_levels/sl_Atlantic_Ocean.txt`. \n",
-      "2. A little more work but more precise: extract the ID of a station in NewYork from the `local_sea_level_stations` dataset, and use it to download timeseries in NY."
+      "2. A little more work but more precise: extract the ID of a station in NewYork from the `local_sea_level_stations` dataset, and use it to download timeseries in NY (URL would be http://www.psmsl.org/data/obtaining/met.monthly.data/< ID >.metdata)."
      ]
     },
     {
