Adding one more exercise about data alignment.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1a103fd1ce4d1d50bc1ba5bf70a2b69ea3bc4daa3446859cd226b5857b4fadc4"
+  "signature": "sha256:518cc91dffdd7799b5f7099f20ce7db23ecdf7390e7e0d3ea84f310ef5bc758d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2106,6 +2106,24 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**EXERCISE:** Create a new series containing the average of the 2 hemispheres minus the global value to see if that is close to 0. Work inside the mean_sea_level dataframe first. Then try with the original Series to see what happens with data alignment while doing computations."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Your code here"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 204
     },
     {
      "cell_type": "heading",
