--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:230c478a4d0e200bd0624693210c086b989b059bdec80bf7999171f4974a22ad"
+  "signature": "sha256:cf718ed1963e7252edc0426b214a31e5b1cb3512c4f3b641952ae463c0b776b4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -292,7 +292,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# You code here"
+      "# Your code here"
      ],
      "language": "python",
      "metadata": {},
