Adding more links to online pandas documentation.

--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d88ee003391a496d246e69288ae3bf8f046851448112ce495aeb3f13c5d1d328"
+  "signature": "sha256:a59562544fbcc7f237cee801f4f5901e301677581b303bf0c0d90556a138e9fd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1241,6 +1241,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "For more details, see http://pandas.pydata.org/pandas-docs/stable/visualization.html"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Now they have been formatted, visualizing your datasets is the next logical step and is trivial with Pandas. The first thing to try is to invoke the `.plot` to generate a basic visualization (uses matplotlib under the covers)."
      ]
     },
@@ -1366,6 +1373,13 @@
      "metadata": {},
      "source": [
       "5. Accessing data"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For more details, see http://pandas.pydata.org/pandas-docs/stable/indexing.html"
      ]
     },
     {
@@ -1866,6 +1880,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "For more details, see http://pandas.pydata.org/pandas-docs/stable/reshaping.html"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Let's look at our `local_sea_level_stations` dataset some more, to learn more about it and also do some formatting. What is the range of dates and lattitudes we have, the list of countries, the range of variations, ..."
      ]
     },
@@ -2074,6 +2095,13 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For more details, see http://pandas.pydata.org/pandas-docs/stable/advanced.html"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -2147,6 +2175,13 @@
      "metadata": {},
      "source": [
       "8. Statistical analysis"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For more details, see http://pandas.pydata.org/pandas-docs/stable/computation.html"
      ]
     },
     {
@@ -2253,6 +2288,13 @@
      "metadata": {},
      "source": [
       "Describing categorical series"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For more details, see http://pandas.pydata.org/pandas-docs/stable/categorical.html"
      ]
     },
     {
@@ -2424,7 +2466,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "let's first look at the average lattitude of sea level stations for each country in `local_sea_level_stations`:"
+      "For more details, see http://pandas.pydata.org/pandas-docs/stable/groupby.html"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Let's first look at the average lattitude of sea level stations for each country in `local_sea_level_stations`:"
      ]
     },
     {
@@ -2648,6 +2697,13 @@
      "metadata": {},
      "source": [
       "Pivot_table"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For more details, see http://pandas.pydata.org/pandas-docs/stable/reshaping.html"
      ]
     },
     {
