--- a/demos/climate_timeseries/climate_timeseries.ipynb
+++ b/demos/climate_timeseries/climate_timeseries.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a59562544fbcc7f237cee801f4f5901e301677581b303bf0c0d90556a138e9fd"
+  "signature": "sha256:4e8500490f220aeee23459c0cb5443992353a15858f17505de0a7fc01f7e63ef"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2819,6 +2819,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "**EXERCISE:** Refer to `exercises/pivot_table/pivot_tables.py`"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "**EXERCISE:** How would we build the same dataframe with a `groupby` operation?"
      ]
     },
@@ -2831,13 +2838,6 @@
      "language": "python",
      "metadata": {},
      "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "**EXERCISE:** Refer to `exercises/pivot_table/pivot_tables.py`"
-     ]
     },
     {
      "cell_type": "heading",
@@ -2888,7 +2888,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Note: by default, the method used is the `Pearson` correlation coefficient (https://en.wikipedia.org/wiki/Pearson_product-moment_correlation_coefficient). Other methods are available (`kendall`, `spearman` using the `method` kwarg)."
+      "Note: by default, the method used is the `Pearson` correlation coefficient. Other methods are available (`kendall`, `spearman` using the `method` kwarg)."
      ]
     },
     {
@@ -3086,7 +3086,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now, how to align the 2 series? Are the mean sea levels sampled regularly so that the month temperatures can be upscaled to that frequency?"
+      "Now, how to align the 2 series? Are the mean sea levels sampled regularly so that the month temperatures can be resampled to that frequency?"
      ]
     },
     {
